--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 # Ignore pycache folder
 _pycache_/
 
+# EXEMPLOS ABAIXO
+
+# Ignore Mac system files
+#.DS_store
+
+# Ignore node_modules folder
+#node_modules
+
+# Ignore all text files
+#*.txt
+
+# Ignore files related to API keys
+#.env
+
+# Ignore SASS config files
+#.sass-cache
