--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,36 @@
-# Ignore pycache folder
+# Ignore folders
 __pycache__
 
-# ---------- EXEMPLOS ---------- 
+# Ignore all new files in front directory
+front/
 
-# Ignore Mac system files
-#.DS_store
+# !front/Imagem4.ico
 
-# Ignore all text files
-#*.txt
 
-# Ignore files related to API keys
-#.env
+# !front/form.ui
+# !load1.ui
+# !login1.ui
+# !register1.ui
 
-# Ignore SASS config files
-#.sass-cache
+# !mainwindow.py
+# !rsc.qrc
+
+# # Ignore all icon files
+# *.ico
+
+# # Ignore all png files
+# *.png
+
+# # Ignore all svg files
+# *.svg
+
+# # Ignore all xml files
+# *.xml
+
+# # Ignore all bat file
+# *.bat
+
+# # Ignore all zip
+# *.zip
+
+# # Ignore all
