--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,7 @@
 __pycache__
 
 # Ignore all new files in front directory
-front/
-
-# !front/Imagem4.ico
-
-
-# !front/form.ui
-# !load1.ui
-# !login1.ui
-# !register1.ui
-
-# !mainwindow.py
-# !rsc.qrc
+front
 
 # # Ignore all icon files
 # *.ico
@@ -32,5 +21,3 @@ front/
 
 # # Ignore all zip
 # *.zip
-
-# # Ignore all
